# IntegralTest

./: README.md  pyproject.toml
00_init/: createDatabase.sql  useDatabase.sql
01_tables/: createRandomValues.sql  grantUsage.sql  showTables.sql
03_tasks/: createStream.sql  createTask.sql  stopTasks.sql  turnOnTask.sql  verifyTasks.sql
04_tests/: showMirror.sql  showRandom.sql  showStream.sql  showSum.sql
05_integral/: callStream.sql  createIntegralTable.sql  createIntegralTask.sql  createIntegrateProcedure.sql  startTask.sql  stopTask.sql  verifyTask.sql
10_allTogether/: createAllTablesNew.sql  deleteValues.sql  showAll.sql  taskManager.sql
20_integrateWithDb/: build.sql  dailyConsumptionRateProcedure.sql  meteoControlProcedure.sql  powerMeterProcedure.sql  show.sql  taskBuilder.sql  taskManager.sql  testCallStream.sql
config/: snowflake_config.toml
scripts/: connectToSnowflake.py  generateRandomData.py  seedIntegralSumValues.py  seedRandomValuesWithGap.py
scripts/analysis/: meteo_data.py  plot.py
scripts/connection/: connectToSnowflake.py
scripts/procedures/: connectToSnowflake.py  dailyConsumptionRate.py  meteoControl.py  powerMeter.py
scripts/seed/: integralSumValues.py  randomValuesWithGap.py
