[project]
name = "integraltest"
version = "0.1.0"
description = ""
authors = [
    {name = "Lars",email = "ltoensing@axsol.eu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "snowflake-connector-python (>=4.0.0,<5.0.0)",
    "tomli (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
